{
    "name": "PolytopeSolutionsInputActions",
    "maps": [
        {
            "name": "CameraControl",
            "id": "a925a72e-4088-4821-8b35-ef3cebcd29a2",
            "actions": [
                {
                    "name": "cameraRotateLeftRight",
                    "type": "Button",
                    "id": "b9503c5c-56d5-4aad-b4b5-ce121b44839c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraRotateUpDown",
                    "type": "Button",
                    "id": "8011092e-bb82-499c-81c6-719d71c87a46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraMoveLeftRight",
                    "type": "Button",
                    "id": "2e127dc9-b56e-4ac5-8ec4-b0df12bf3187",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraMoveUpDown",
                    "type": "Button",
                    "id": "c6716c21-b63e-43a1-b8ed-5d24a04800cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraMoveForwardBackward",
                    "type": "Button",
                    "id": "f78f2a22-a698-4f2f-92ad-6104cad1d0a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "touchAny",
                    "type": "Button",
                    "id": "88d79813-33a4-4bd6-a30c-6dd2334095d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "39d52950-f47b-4b3c-a772-cb655d32cc1f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "cameraRotateLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7ccb229e-c4ff-4713-814a-65fac3317cab",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6ebec0fb-1cf3-410e-8ca3-458c9d2d50a7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f55bdfb0-77f4-429e-beee-fcc75b4efb3b",
                    "path": "1DAxis(minValue=-10,maxValue=10)",
                    "interactions": "",
                    "processors": "AxisDeadzone(max=9.25)",
                    "groups": "",
                    "action": "cameraRotateLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "525a7bfc-b40b-4bf8-ae40-0dd79acde577",
                    "path": "<ExtendedTouch>/twoFingerLeft",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8130cd61-634c-463e-9a99-3730d8d54da1",
                    "path": "<ExtendedTouch>/twoFingerRight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "bbcddfbf-978f-4f94-9bc6-89a013409753",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "cameraMoveForwardBackward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ed197656-da4c-4cf1-9b04-66d3892a10d2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ed190066-87b3-4eab-a307-09c479bc3837",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "9a267453-8d8e-4535-a3bb-a5497269c38b",
                    "path": "1DAxis(minValue=-10,maxValue=10)",
                    "interactions": "",
                    "processors": "AxisDeadzone(max=9.25)",
                    "groups": "",
                    "action": "cameraMoveForwardBackward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d953ecf0-ea93-49f3-8cff-7300ea35cfa7",
                    "path": "<ExtendedTouch>/singleFingerDown",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5f3b82ca-aba8-4772-a303-e1579d975726",
                    "path": "<ExtendedTouch>/singleFingerUp",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveForwardBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c704e1d9-5a25-48bc-ac67-e6ef792ad616",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "cameraRotateUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dbe6df22-cf7c-4f0f-aa14-4b234bd2e4ab",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6e79d611-7a41-4d5f-9f60-2d6bcc2b00ad",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "845bea4f-83d9-4898-bc5c-b7747b9f6647",
                    "path": "1DAxis(minValue=-10,maxValue=10)",
                    "interactions": "",
                    "processors": "AxisDeadzone(max=9.25)",
                    "groups": "",
                    "action": "cameraRotateUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "609df561-fcaa-49f2-98ed-affe4223a4ed",
                    "path": "<ExtendedTouch>/twoFingerUp",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5bd2e2ff-5e29-4d81-a68e-4ab721dd5ba7",
                    "path": "<ExtendedTouch>/twoFingerDown",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "3be483f6-12b0-4da0-98e6-432c2522af34",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "cameraMoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dd5fa0fa-2c3a-4a31-9e80-4cc67d36e432",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4560f684-dfe8-4d39-af2d-6a52cc608c04",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f79553ce-9ad1-4432-badd-5e9dd674b6b0",
                    "path": "1DAxis(minValue=-10,maxValue=10)",
                    "interactions": "",
                    "processors": "AxisDeadzone(max=9.25)",
                    "groups": "",
                    "action": "cameraMoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "20cc8c34-6580-40a1-ae74-f2f81387fce8",
                    "path": "<ExtendedTouch>/singleFingerRight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d4f45d04-923d-4d74-acf9-f0f7c88317e7",
                    "path": "<ExtendedTouch>/singleFingerLeft",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d0ea6c3b-48f4-46f9-9642-25418898d9df",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "cameraMoveUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bb6bf1ad-6833-4c7b-a8fa-3fe939283fc6",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "65f6fe71-8dc0-41ad-b64c-051b2ff0f5a7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "15cf7e8f-7b02-443e-b77e-ebd5ef2cba7e",
                    "path": "1DAxis(minValue=-10,maxValue=10)",
                    "interactions": "",
                    "processors": "AxisDeadzone(max=9.25)",
                    "groups": "",
                    "action": "cameraMoveUpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4680dda3-0ed6-4bdd-9fbb-450bcad4f705",
                    "path": "<ExtendedTouch>/twoFingerZoom",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f522b88b-527c-4831-9d51-719f6ef67cb7",
                    "path": "<ExtendedTouch>/twoFingerPinch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMoveUpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5305609f-334b-40f4-a349-256048f1d870",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f471f4a3-de55-4b99-baa4-28630dd08b32",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0410bcd8-2585-4823-b612-390d05eaa177",
                    "path": "<Touchscreen>/touch2/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7196e3a-e8c7-4a57-86d7-16bc86cc69cb",
                    "path": "<Touchscreen>/touch3/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "803609ea-f61d-442f-a47e-58fd1c5c7a29",
                    "path": "<Touchscreen>/touch4/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "510607c1-ca14-405c-8f20-466b6f457fdf",
                    "path": "<Touchscreen>/touch5/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18f28596-2dde-44e3-97df-3f2119465403",
                    "path": "<Touchscreen>/touch6/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fda79173-44bb-458f-88fc-99aa8e54d133",
                    "path": "<Touchscreen>/touch7/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ff3cb8d-280a-4349-8e59-203d7edac1e2",
                    "path": "<Touchscreen>/touch8/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c626c042-1ffd-405f-963f-f95bf12f8827",
                    "path": "<Touchscreen>/touch9/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchAny",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pointer",
            "id": "39858e89-8899-4901-b377-5c9503e31d5d",
            "actions": [
                {
                    "name": "PointerContact",
                    "type": "Button",
                    "id": "14f18cdf-d9ff-44aa-b95d-b9f36a59db84",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "b8574aea-d342-49d1-884e-7a1245192fe0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DualContact",
                    "type": "Button",
                    "id": "b7f023b8-5676-4300-a69c-272fa576fd2f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16b23801-c7f5-4f11-be7c-a519abdb16de",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e273033-0035-4772-9330-dc8abc9eebbd",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "eec7df13-b531-470e-90d0-85025c7062f5",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DualContact",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "862e175e-56bb-4486-a4d5-f3d466672baa",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DualContact",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "bbc919c7-a05b-455a-84e6-9f58513e7387",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DualContact",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "0b85fabd-068a-4456-b372-5c88d466c931",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DualContact",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "3f5890a1-56fa-4a67-802d-45f3796ccaad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DualContact",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e74c6ced-ee43-41a8-85ad-3c08f7f707e7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DualContact",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "NewInput",
            "id": "854ba7c8-4134-481d-b6e1-dc50693b652e",
            "actions": [
                {
                    "name": "PointerDown",
                    "type": "Button",
                    "id": "511b1520-005a-440b-811c-73273abbc347",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "386ead67-ce14-452b-850f-4cdf5fec55c4",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}